--- a/HK Honker.html
+++ b/HK Honker.html
@@ -190,6 +190,8 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 			  <p>By 2020.6.25 ZZC 26263</p>
 			  <p>&nbsp;</p>
 			  <p><strong>© 2020 Honker 版权所有 </strong></p>
+			  <p>&nbsp;</p>
+			  <p><strong><u><a href="关于红客.html" title="关于红客" target="new">关于红客</a></u></strong></p>
 			</div><div>&nbsp;</div><div><br></div>
 		</div> 
 	</div> </div></div></div><style class="column_class qfy_style_class">@media only screen and (min-width: 992px){.qfy-column-2-5ef43bca547ba740867 > .column_inner {padding-left:0;padding-right:0;padding-top:0;padding-bottom:0;}.qfe_row .vc_span_class.qfy-column-2-5ef43bca547ba740867 {};}@media only screen and (max-width: 992px){.qfy-column-2-5ef43bca547ba740867 > .column_inner{margin:0 auto 0 !important;padding-left:0;padding-right:0;padding-top:;padding-bottom:;}.display_entire .qfe_row .vc_span_class.qfy-column-2-5ef43bca547ba740867 {}.qfy-column-2-5ef43bca547ba740867 > .column_inner> .background-overlay,.qfy-column-2-5ef43bca547ba740867 > .column_inner> .background-media{width:100% !important;left:0 !important;right:auto !important;}}</style>        </div>
