--- a/关于红客.html
+++ b/关于红客.html
@@ -305,7 +305,7 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 	   @media only screen and (max-width: 992px){
 		.bit-html section.section.qfy-row-8-5ef5575340b05575846{padding-left:15px;padding-right:15px;padding-top:20px;padding-bottom:;margin-top:0;}}
 	</style>
-	    	    <div class="section-background-overlay background-overlay grid-overlay-0 " style="background-color: #ffffff;"></div>
+	    	    
 
     <div class="container">
         <div class="row qfe_row">
@@ -317,7 +317,8 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 	</div> </div></div></div><style class="column_class qfy_style_class">@media only screen and (min-width: 992px){.qfy-column-8-5ef5575340b35168548 > .column_inner {padding-left:0;padding-right:0;padding-top:0;padding-bottom:0;}.qfe_row .vc_span_class.qfy-column-8-5ef5575340b35168548 {};}@media only screen and (max-width: 992px){.qfy-column-8-5ef5575340b35168548 > .column_inner{margin:0 auto 0 !important;padding-left:0;padding-right:0;padding-top:;padding-bottom:;}.display_entire .qfe_row .vc_span_class.qfy-column-8-5ef5575340b35168548 {}.qfy-column-8-5ef5575340b35168548 > .column_inner> .background-overlay,.qfy-column-8-5ef5575340b35168548 > .column_inner> .background-media{width:100% !important;left:0 !important;right:auto !important;}}</style>        </div>
     </div>
 	
-</section>                             </div>
+</section>                             
+</div>
                     
 
                          <div class="clear"></div>
@@ -356,7 +357,7 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
         	    </div>
     		</div><!-- .wf-wrap -->
 
-</div><!-- #page -->
+<!-- #page -->
 
 <link rel="stylesheet" href="./关于红客_files/c9e6543c252973e8fe85d0ffb6ab23a6.css" type="text/css" media="all"> <!-- Cache! -->
 <style type="text/css">
