--- a/关于红客.html
+++ b/关于红客.html
@@ -78,8 +78,8 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 
 <div id="page" class=" header_bg_mobilehide wide "><div id="dl-menu" class="dl-menuwrapper wf-mobile-visible floatmenu left" style="right: 8px; top: 10px;"><a data-padding="" data-top="10" data-right="8" rel="nofollow" id="mobile-menu" class="glyphicon glyphicon-icon-align-justify floatmenu left">
 				<span class="menu-open  phone-text">关于红客</span>
-				<span class="menu-close">关闭</span>
-				<span class="menu-back">返回上一级</span>
+				<span class="menu-close"></span>
+				<span class="menu-back"></span>
 				<span class="wf-phone-visible">&nbsp;</span>
 			</a></div>
 
@@ -146,7 +146,7 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
  <section class="bitBanner" id="bitBanner" bitdatamarker="bitBanner" bitdataaction="site_fix_container">
 	</section>
 <div id="main" class="bit_main_content">
-
+<strong></strong>
 
 		<div class="main-gradient"></div>
 
@@ -347,15 +347,7 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 </style>
 <!--  ************end************* -->
 </footer>
-		        	<div id="footer_band" style="position: absolute; bottom: 0px; width: 100%; z-index: 10; background-color: rgb(0, 0, 0); color: rgb(204, 204, 204); min-height: 10px !important; display: none;" class="bottom-bit-bar" role="contentinfo">
-        		<div class="wf-wrap" style="min-height: 10px !important;">
-        			<div class="wf-table wf-mobile-collapsed">
-    						<div style="padding:2px 0;" class="wf-float-center">
-    							由<a href="http://w-95161-81600-32793.4752133136.sites.hk37.qifeiye.com/?page_id=22062&amp;qfy_preview=1#" rel="nofollow" target="_BLANK" style="color:#0088C2;">起飞页自助建站</a>提供技术支持					
-    					     </div>
-                    </div>
-        	    </div>
-    		</div><!-- .wf-wrap -->
+<!-- .wf-wrap -->
 
 <!-- #page -->
 
