--- a/关于红客.html
+++ b/关于红客.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- saved from url=(0014)about:internet -->
-<html class="bit-html mobile-false js_active  vc_desktop  vc_transform  vc_transform  no-touch" dir="ltr" lang="zh-CN"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!-- saved from url=(0081)https://asdetycv1zzc.github.io/hkhonker/%E5%85%B3%E4%BA%8E%E7%BA%A2%E5%AE%A2.html -->
+<html class="bit-html mobile-false js_active  vc_desktop  vc_transform  vc_transform  no-touch mobile-false js_active  vc_desktop  vc_transform  vc_transform" dir="ltr" lang="zh-CN"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- for 360 -->
 	<meta name="renderer" content="webkit"> 
 	<meta name="applicable-device" content="pc,mobile"> <!-- for baidu -->
@@ -56,7 +56,16 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 </head>
 
 
-<body class="page page-id-22062 page-template-default logged-in admin-bar no-customize-support image-blur free_public btn-flat content-fullwidth qfe-js-composer js-comp-ver-4.0.1 vc_responsive is-webkit mobilefloatmenu" data-pid="22062" data-pkey="24a7e3740888ce77251ce2986f8bb0d5" style=""><div class="dl-menuwrapper  wf-mobile-visible floatmenu floatwarpper left"><div class="dl-container"><ul data-st="1" data-sp="1" data-fh="1" data-mw="0" data-lh="32" class="dl-menu" data-bit-menu="bit-menu-default" data-bit-float-menu="underline-hover"><div class="menu-left-nav menu-nav"><li class=" menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-22062 current_page_item bit-menu-post-id-22062 menu-item-22063 act first"><a href="http://w-95161-81600-32793.4752133136.sites.hk37.qifeiye.com/?page_id=22062"><span>关于红客<i class="underline"></i></span></a></li></div><div class="menu-center-nav">
+<body class="page page-id-22062 page-template-default logged-in admin-bar no-customize-support image-blur free_public btn-flat content-fullwidth qfe-js-composer js-comp-ver-4.0.1 vc_responsive is-webkit mobilefloatmenu" data-pid="22062" data-pkey="24a7e3740888ce77251ce2986f8bb0d5" style=""><div class="dl-menuwrapper  wf-mobile-visible floatmenu floatwarpper left"><div class="dl-container"><ul data-st="1" data-sp="1" data-fh="1" data-mw="0" data-lh="32" class="dl-menu" data-bit-menu="bit-menu-default" data-bit-float-menu="underline-hover"><div class="menu-left-nav menu-nav">
+			  <li class=" menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-22062 current_page_item bit-menu-post-id-22062 menu-item-22063 act first"><a href="http://w-95161-81600-32793.4752133136.sites.hk37.qifeiye.com/?page_id=22062"></a></li></div><div class="menu-center-nav">
+
+<div id="branding" class="wf-td bit-logo-bar" style="">
+	
+	
+	<!-- <div id="site-title" class="assistive-text"></div>
+	<div id="site-description" class="assistive-text"></div> -->
+</div></div><div class="menu-right-nav  menu-nav"></div>
+</ul></div></div><div class="dl-menuwrapper  wf-mobile-visible floatmenu floatwarpper left"><div class="dl-container"><ul data-st="1" data-sp="1" data-fh="1" data-mw="0" data-lh="32" class="dl-menu" data-bit-menu="bit-menu-default" data-bit-float-menu="underline-hover"><div class="menu-left-nav menu-nav"><li class=" menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-22062 current_page_item bit-menu-post-id-22062 menu-item-22063 act first"><a href="http://w-95161-81600-32793.4752133136.sites.hk37.qifeiye.com/?page_id=22062"><span>关于红客<i class="underline"></i></span></a></li></div><div class="menu-center-nav">
 
 <div id="branding" class="wf-td bit-logo-bar" style="">
 	
@@ -78,8 +87,8 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 
 <div id="page" class=" header_bg_mobilehide wide "><div id="dl-menu" class="dl-menuwrapper wf-mobile-visible floatmenu left" style="right: 8px; top: 10px;"><a data-padding="" data-top="10" data-right="8" rel="nofollow" id="mobile-menu" class="glyphicon glyphicon-icon-align-justify floatmenu left">
 				<span class="menu-open  phone-text">关于红客</span>
-				<span class="menu-close"></span>
-				<span class="menu-back"></span>
+				<span class="menu-close">关闭</span>
+				<span class="menu-back">返回上一级</span>
 				<span class="wf-phone-visible">&nbsp;</span>
 			</a></div>
 
@@ -141,12 +150,12 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 		</div><!-- .navigation-holder -->
 
 		
-	</header><div id="dl-menu" class="dl-menuwrapper wf-mobile-visible mobiledefault_containter left" style="text-align: center; margin: 0px auto; right: 8px; top: 10px;"></div><!-- #masthead -->
+	</header><div id="dl-menu" class="dl-menuwrapper wf-mobile-visible mobiledefault_containter left" style="text-align: center; margin: 0px auto; right: 8px; top: 10px;"><div id="dl-menu" class="dl-menuwrapper wf-mobile-visible main-mobile-menu left" style="display: none; right: 8px; top: 10px;"></div></div><!-- #masthead -->
 
  <section class="bitBanner" id="bitBanner" bitdatamarker="bitBanner" bitdataaction="site_fix_container">
 	</section>
 <div id="main" class="bit_main_content">
-<strong></strong>
+
 
 		<div class="main-gradient"></div>
 
@@ -347,7 +356,8 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 </style>
 <!--  ************end************* -->
 </footer>
-<!-- .wf-wrap -->
+		        	<div id="footer_band" style="position: absolute; bottom: 0px; width: 100%; z-index: 10; background-color: rgb(0, 0, 0); color: rgb(204, 204, 204); min-height: 10px !important; display: none;" class="bottom-bit-bar" role="contentinfo">
+    		</div><!-- .wf-wrap -->
 
 <!-- #page -->
 
@@ -355,8 +365,5 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 <style type="text/css">
 
 </style>
-		<style>html.qf-toolbar{padding:0px;}</style>		<div style="display:none;"></div>    
-
-
-
-</body></html>
+		<style>html.qf-toolbar{padding:0px;}</style>		<div style="display:none;"></div>
+</div></body></html>
