--- a/关于红客.html
+++ b/关于红客.html
@@ -357,6 +357,13 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 <!--  ************end************* -->
 </footer>
 		        	<div id="footer_band" style="position: absolute; bottom: 0px; width: 100%; z-index: 10; background-color: rgb(0, 0, 0); color: rgb(204, 204, 204); min-height: 10px !important; display: none;" class="bottom-bit-bar" role="contentinfo">
+        		<div class="wf-wrap" style="min-height: 10px !important;">
+        			<div class="wf-table wf-mobile-collapsed">
+    						<div style="padding:2px 0;" class="wf-float-center">
+    							由<a href="http://w-95161-81600-32793.4752133136.sites.hk37.qifeiye.com/?page_id=22062&amp;qfy_preview=1#" rel="nofollow" target="_BLANK" style="color:#0088C2;">起飞页自助建站</a>提供技术支持					
+    					     </div>
+                    </div>
+        	    </div>
     		</div><!-- .wf-wrap -->
 
 <!-- #page -->
@@ -365,5 +372,4 @@ var thickboxL10n = {"next":"\u4e0b\u4e00\u5f20 >","prev":"< \u4e0a\u4e00\u5f20",
 <style type="text/css">
 
 </style>
-		<style>html.qf-toolbar{padding:0px;}</style>		<div style="display:none;"></div>
-</div></body></html>
+		<style>html.qf-toolbar{padding:0px;}</style>		<div style="display:none;"></div>    
